# learn-interpretability

./: .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  README_zh.md  pyproject.toml
artifacts/: concept_graph.json  m04_attribution_graph.json  m05_persona_vectors.json  manifest.json
content/: course.json  extensions.json  glossary.json  program.json  reference_outputs.json
docs/en/: index.md  repo-map.md
docs/en/articles/: d00-thread-circuits.md  d01-zoom-in.md  d02-early-vision.md  d03-curve-detectors.md  d04-equivariance.md  d05-high-low-frequency-detectors.md  d06-curve-circuits.md  d07-visualizing-weights.md  d08-branch-specialization.md  d09-weight-banding.md  index.md
docs/en/extensions/: index.md  x01-transformer-circuits-framework.md  x02-induction-heads.md  x03-ioi-circuit.md  x04-ffn-key-value-memories.md  x05-knowledge-neurons.md  x06-rome-factual-editing.md  x07-auditing-hidden-objectives.md
docs/en/modules/: m00-vision-circuits.md  m00-zoom-in-circuits.md  m01-superposition.md  m02-monosemantic-features.md  m03-feature-probes-steering.md  m03-mapping-the-mind.md  m04-circuit-tracing.md  m05-character-control.md  m06-tracing-thoughts.md  m07-circuit-tracing-tools.md  m08-persona-vectors.md  m10-assistant-axis.md  (+1 more)
docs/zh/: index.md  repo-map.md
examples/en/: reference_paper_brief.md
examples/zh/: reference_paper_brief.md
launch/: github_release_v1_0_0.md  launch_post_en.md  launch_post_zh.md
notebooks/: circuits_zoom_in_en.ipynb  circuits_zoom_in_zh.ipynb
notebooks/en/: d01_zoom_in.ipynb  d02_early_vision.ipynb  d03_curve_detectors.ipynb  d04_equivariance.ipynb  d05_high_low_frequency_detectors.ipynb  d06_curve_circuits.ipynb  d07_visualizing_weights.ipynb  d08_branch_specialization.ipynb  d09_weight_banding.ipynb  m00_vision_circuits.ipynb  m00_zoom_in_circuits.ipynb  m01_superposition.ipynb  m02_monosemantic_features.ipynb  m03_feature_probes_steering.ipynb  m04_circuit_tracing.ipynb  m05_character_control.ipynb
notebooks/zh/: d01_zoom_in.ipynb  d02_early_vision.ipynb  d03_curve_detectors.ipynb  d04_equivariance.ipynb  d05_high_low_frequency_detectors.ipynb  d06_curve_circuits.ipynb  d07_visualizing_weights.ipynb  d08_branch_specialization.ipynb  d09_weight_banding.ipynb  m00_vision_circuits.ipynb  m00_zoom_in_circuits.ipynb  m01_superposition.ipynb  m02_monosemantic_features.ipynb  m03_feature_probes_steering.ipynb  m04_circuit_tracing.ipynb  m05_character_control.ipynb
scripts/: audit_realtime_policy.py  check_links.py  generate_course_notebooks.py  render_readmes.py  repo_metadata.py  smoke_notebooks.py  validate_course.py
templates/: paper_reading_note_en.md  paper_reading_note_zh.md
utils/: distill_circuits.py
web/: package-lock.json  package.json  tsconfig.tsbuildinfo
(+88 files in other folders)
