[project]
name = "learn-interpretability"
version = "0.1.0"
description = "A bilingual course that connects visual circuits intuition to Anthropic's interpretability research arc"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Jonny-English"},
]
keywords = [
    "mechanistic-interpretability",
    "superposition",
    "sparse-autoencoders",
    "circuit-tracing",
    "AI-safety",
    "education",
]

dependencies = [
    "torch>=1.12",
    "torchvision>=0.13",
    "torch-lucent>=0.1.8",
    "numpy>=1.21",
    "matplotlib>=3.5",
    "Pillow>=9.0",
]

[project.urls]
Homepage = "https://github.com/Jonny-English/learn-interpretability"
Repository = "https://github.com/Jonny-English/learn-interpretability"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"
