[project]
name = "learn-interpretability"
version = "0.1.0"
description = "A bilingual, Colab-first Distill Circuits repository with live notebooks for the 2020 circuits thread"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Jonny-English"},
]
keywords = [
    "mechanistic-interpretability",
    "distill-circuits",
    "inceptionv1",
    "visual-circuits",
    "feature-visualization",
    "education",
]

dependencies = [
    "torch>=1.12",
    "torchvision>=0.13",
    "torch-lucent>=0.1.8",
    "numpy>=1.21",
    "matplotlib>=3.5",
    "Pillow>=9.0",
]

[project.urls]
Homepage = "https://github.com/Jonny-English/learn-interpretability"
Repository = "https://github.com/Jonny-English/learn-interpretability"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"
